...
        progressBarWidthConstraint.constant = (self.view.bounds.width / 30) * CGFloat(pageIndex + 1)
    }

    // 배우기를 취소하고 돌아가기
    @IBAction func closeBtnTapped(_ sender: UIButton) {
        
        let alert: UIAlertController = UIAlertController(title: "메인 화면으로", message: "여기서 끝낼 경우 오늘의 단어가 완료되지 않습니다.", preferredStyle: .alert)
        
        let ok = UIAlertAction(title: "끝내기", style: .destructive, handler: {_ in
            self.dismiss(animated: true, completion: nil)
        })
        
        let cancel = UIAlertAction(title: "돌아가기", style: .default, handler: {_ in
            alert.dismiss(animated: true, completion: nil)
        })
...
