...
                                        <color key="textColor" red="0.18431372549019609" green="0.19215686274509802" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yqp-C0-dai">
                                        <rect key="frame" x="37.5" y="38.5" width="59" height="32"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <state key="normal" title="시작하기">
                                            <color key="titleColor" red="0.30588235294117649" green="0.72941176470588232" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="beu-02-FO5" kind="presentation" identifier="dayStartSegue" id="uGb-86-Azc"/>
                                        </connections>
                                    </button>
...
            <point key="canvasLocation" x="-353" y="404"/>
        </scene>
        <!--Settings-->
        <scene sceneID="ckL-L3-zwE">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E4v-Ue-vIe" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="06l-Rt-CFc"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="T7y-A8-yBX">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
